
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct snd_kcontrol {int dummy; } ;
struct TYPE_3__ {int step; int min; int max; } ;
struct TYPE_4__ {TYPE_1__ integer; } ;
struct snd_ctl_elem_info {int count; TYPE_2__ value; int type; } ;


 int SNDRV_CTL_ELEM_TYPE_INTEGER ;
 int SND_US16X08_KCMAX (struct snd_kcontrol*) ;
 int SND_US16X08_KCMIN (struct snd_kcontrol*) ;
 int SND_US16X08_KCSTEP (struct snd_kcontrol*) ;

__attribute__((used)) static int snd_us16x08_master_info(struct snd_kcontrol *kcontrol,
 struct snd_ctl_elem_info *uinfo)
{
 uinfo->count = 1;
 uinfo->type = SNDRV_CTL_ELEM_TYPE_INTEGER;
 uinfo->value.integer.max = SND_US16X08_KCMAX(kcontrol);
 uinfo->value.integer.min = SND_US16X08_KCMIN(kcontrol);
 uinfo->value.integer.step = SND_US16X08_KCSTEP(kcontrol);
 return 0;
}
